# prem4derg

./: .gitignore  LICENSE  PREM_density_example.ipynb  PREM_normal_modes_example.ipynb  PREM_travel_times_example.ipynb  PREM_traveltime_example.ipynb  PREM_velocity_example.ipynb  README.md  earth_model.py  mineos_param.txt  peice_poly.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
earth_model/: __init__.py  earth_model.py  peice_poly.py
notebooks/: PREM_density_example.ipynb  PREM_travel_times_example.ipynb  PREM_velocity_example.ipynb
src/prem4derg/: PREM.py  __init__.py  const.py  earth_model.py  peice_poly.py  physics.py
tests/: test_peice_poly.py  test_prem.py
week_1_talk/: week_1_slides.ipynb  week_1_slides.slides.html
